# legion

examples/signal_handling_test/: README.md  signal_handling_test.cc
runtime/: CMakeLists.txt
runtime/legion/: legion_instances.h  legion_profiling.cc  legion_profiling.h  legion_profiling_serializer.cc  legion_profiling_serializer.h  legion_types.h  runtime.cc  runtime.h
runtime/realm/: runtime_impl.cc  signal_handlers.cc  signal_handlers.h
test/: CMakeLists.txt
test/profiling/: CMakeLists.txt  instance_names.cc
tests/regent/run_pass/: prof_instance_names.rg  verify_instance_name.py
tools/legion_prof_rs/src/: state.rs
